# RayNgine

./: .gitignore  CMakeLists.txt  Config.ini  DefaultLevel.json  What is an Entity Component.md
Docs/: CreatingANode.md  Docs.md
Game/: Game.7z  config.ini
Source/: CoreDbg.h  ErrorTypes.h  Shooter_Raylib.cpp  Shooter_Raylib.h
Source/Core/: ClassesTable.h  IDAllocator.cpp  IDAllocator.h  LevelLoader.cpp  LevelLoader.h  LevelSerializer.cpp  LevelSerializer.h  NodeFactory.cpp  NodeFactory.h  Physics.cpp  Physics.h  Window.cpp  Window.h  World.cpp  World.h
Source/Core/Entity/: Component.h  ComponentArray.h
Source/Core/Factories/: Entity.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h
Source/Core/Math/: Vector.h
Source/Core/Meshes/: Renderable.cpp  Renderable.h
Source/Core/Nodes/: Node.cpp  Node.h  NodeRegistrar.h
Source/Core/Nodes/2D/: Circle2D.cpp  Circle2D.h
Source/Core/Nodes/3D/: Node3D_Physics.cpp  Node3D_Physics.h
Source/Core/Nodes/World/: CameraNode.cpp  CameraNode.h  WorldRoot.cpp  WorldRoot.h
Source/Core/Physics/: PhysicsInterface.h
Source/Debugging/: Logger.cpp  Logger.h
Source/Tools/: IniParser.cpp  IniParser.h
